address issues with user being undefined as detailed on SO here https://stackoverflow.com/questions/48840957/angular-firebase-auth-service-user-always-undefined, which required a lot of refactoring of authorizationService including commenting out several methods, some of which makes me nervous, improve styling and validation of dialog box, make validation service methods more robust, remove location reload in login component that would have it stuck in an infinite refresh cycle

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -42,11 +42,14 @@ $primary-color: green;
 
 .flexbox-vertical{
   width: 25em;
-  background-color: #e6e8e7;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: stretch;
+}
+
+.grey {
+  background-color: #e6e8e7;
 }
 
 .flexbox-item{
